[metadata]
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#metadata
name = ebook_building
version = 0.0.1
description = ebook creation from a directory with markdown files
author = Jose Blanca
author_email = jblanca@upv.es

[options]
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#using-a-src-layout
package_dir =
    =src
packages=find:

[options.packages.find]
where = src